# Flux

./: .gitignore  CLAUDE.md  CMakeLists.txt  Commands.txt  Notes.txt  README.md
include/: command_buffers.h  command_pool.h  depth_buffer.h  frame_buffers.h  logical_device.h  physical_device.h  pipeline.h  render_pass.h  shader_module.h  swapchain.h  swapchain_images.h  sync_objects.h  vertex.h  vertex_buffer.h  vulkan_instance.h  vulkan_surface.h  window.h
shaders/: cube.frag  cube.vert  triangle.frag
src/: command_buffers.cpp  command_pool.cpp  depth_buffer.cpp  frame_buffers.cpp  logical_device.cpp  main.cpp  physical_device.cpp  pipeline.cpp  render_pass.cpp  shader_module.cpp  swapchain.cpp  swapchain_images.cpp  sync_objects.cpp  vertex.cpp  vertex_buffer.cpp  vulkan_instance.cpp  vulkan_surface.cpp  window.cpp
